Level-Stats Panel: Kopf auf BEIDE umgestellt

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -2546,7 +2546,7 @@ function renderLevelStats() {
             <tr>
                 <th style="padding:6px 8px;border-bottom:1px solid #333;text-align:left;">Level</th>
                 <th style="padding:6px 8px;border-bottom:1px solid #333;text-align:center;">Teile</th>
-                <th style="padding:6px 8px;border-bottom:1px solid #333;text-align:center;">EN / DE / Both / ∑</th>
+                <th style="padding:6px 8px;border-bottom:1px solid #333;text-align:center;">EN / DE / BEIDE / ∑</th>
                 <th style="padding:6px 8px;border-bottom:1px solid #333;text-align:center;">Fertig-%</th>
             </tr>
     `;
